--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -216,7 +216,7 @@ input {
         border-radius: 8px 0 0 8px;
         width: 100%;
     }
-    .padding-none{
+    .padding-none {
         padding: 0;
     }
     .upload-file {
@@ -244,6 +244,23 @@ input {
         color: $primary;
     }
     p {
+        color: $primary;
+    }
+}
+.img-upload {
+    width: 100%;
+    img {
+        width: 200px;
+        height: 200px;
+    }
+}
+.file-item-empty {
+    background-color: #f9fafb;
+    border-radius: 10px;
+    font-size: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    i {
+        font-size: 2.5rem;
         color: $primary;
     }
 }
