--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -111,6 +111,23 @@
         margin: 0;
     }
 }
+.img-upload {
+    width: 100%;
+    img {
+        width: 200px;
+        height: 200px;
+    }
+}
+.file-item-empty {
+    background-color: #f9fafb;
+    border-radius: 10px;
+    font-size: 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    i {
+        font-size: 2.5rem;
+        color: $primary;
+    }
+}
 .button-bottom {
     button {
         font-size: 16px;
