Fix avatar size

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -1058,6 +1058,7 @@
                   text="{{ getAvatar(rowData.node.assignee?.user.fullName) }}"
                   [rounded]="true"
                   [autoColor]="true"
+                  [size]="'s'"
                 >
                 </tui-avatar>
               </div>
