fix css dashboard

--- a/src/app/features/post-login/dashboard/dashboard.component.scss
+++ b/src/app/features/post-login/dashboard/dashboard.component.scss
@@ -118,6 +118,10 @@
 .height-row-principal {
     height: 240px;
 }
+.height-row-director {
+  height: 300px;
+}
+.height-row-director .col-md-4,
 .height-row-principal .col-md-4,
 .height-row-principal .col-md-5,
 .height-row-principal .col-md-3 {
