--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="d-flex flex-column justify-content-between h-100">
-      <div class="card mt-2">
+      <div class="card mt-2 h-100">
         <div class="scrollable-container overflow-auto d-flex flex-column justify-content-between h-100">
           <ng-container *ngFor="let item of selectedInspectors; let i = index">
             <div *ngIf="selectedInspectors" class="mt-1 my-2">
