--- a/src/app/features/post-login/dashboard/dashboard.component.html
+++ b/src/app/features/post-login/dashboard/dashboard.component.html
@@ -52,12 +52,12 @@
                 <i class="bi bi-calendar2-check-fill"></i>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-7">
               <span class="color-gray"
                 >trên tổng số {{ totalSchool }} kế hoạch</span
               >
             </div>
-            <div class="col-md-6 d-flex justify-content-end">
+            <div class="col-md-5 d-flex justify-content-end">
               <span class="redirect-link" (click)="viewInitiationPlanList()"
                 >Xem chi tiết</span
               >
@@ -98,16 +98,16 @@
         </div>
       </div>
     </div>
-    <div class="row mt-4">
+    <div class="row mt-4 height-row-director">
       <div class="col-md-4">
         <p *ngIf="issueNotFound">
           Chưa có kế hoạch kiểm tra được khởi tạo, không thể thống kê thực trạng
           kế hoạch thanh tra
         </p>
-        <div class="card p-3" *ngIf="inspectionPlanDataChart">
+        <div class="card p-3 h-100" *ngIf="inspectionPlanDataChart">
           <h6 class="mat-headline-6">Thực trạng kế hoạch thanh tra</h6>
           <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-6">
               <tui-ring-chart
                 size="l"
                 [value]="inspectionPlanDataChart?.data"
@@ -119,7 +119,7 @@
                 </div>
               </tui-ring-chart>
             </div>
-            <div class="row col-md-5">
+            <div class="row col-md-6">
               <div
                 *ngFor="
                   let item of inspectionPlanDataChart?.labels;
@@ -150,10 +150,10 @@
         kế hoạch thực hiện nhiệm vụ
       </p>
       <div class="col-md-4" *ngIf="initiationPlanDataChart">
-        <div class="card p-3">
+        <div class="card p-3 h-100">
           <h6 class="mat-headline-6">Thực trạng kế hoạch thực hiện</h6>
           <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-6">
               <tui-ring-chart
                 size="l"
                 [value]="initiationPlanDataChart?.data"
@@ -163,7 +163,7 @@
                 <div>{{ label(initiationPlanDataChart, index_init) }}</div>
               </tui-ring-chart>
             </div>
-            <div class="row col-md-5">
+            <div class="row col-md-6">
               <!-- app.component.html -->
               <div
                 *ngFor="
@@ -185,7 +185,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card p-3">
+        <div class="card p-3 h-100">
           <h6 class="mat-headline-6">Truy cập nhanh</h6>
           <div>
             <div
@@ -255,7 +255,7 @@
               <label class="fw-medium fs-18">Phiên thanh tra của bạn</label>
             </div>
             <div class="col-md-6 mb-2">
-              <label class="fw-medium">Trạng thái</label>
+<!--              <label class="fw-medium">Trạng thái</label>-->
               <p-dropdown
                 placeholder="Chọn 1 trạng thái"
                 [options]="inspectionPlanStatuses"
@@ -359,7 +359,7 @@
               <label class="fw-medium fs-18">Phiên thanh tra của bạn</label>
             </div>
             <div class="col-md-6 mb-2">
-              <label class="fw-medium">Trạng thái</label>
+<!--              <label class="fw-medium">Trạng thái</label>-->
               <p-dropdown
                 placeholder="Chọn 1 trạng thái"
                 [options]="inspectionPlanStatuses"
@@ -439,7 +439,7 @@
               <label class="fw-medium fs-18">Công việc hiện tại</label>
             </div>
             <div class="col-md-6 mb-2">
-              <label class="fw-medium">Trạng thái</label>
+<!--              <label class="fw-medium">Trạng thái</label>-->
               <p-dropdown
                 placeholder="Chọn 1 trạng thái"
                 [options]="statuses"
@@ -471,13 +471,13 @@
               <ng-container *ngFor="let task of taskTrees; let i = index">
                 <div class="row mb-2">
                   <div
-                    class="col-md-6 td-content"
+                    class="col-md-5 td-content"
                     pTooltip="{{ task.rootAssignmentName }}"
                     tooltipPosition="top"
                   >
                     <span>{{ task.rootAssignmentName }}</span>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-5">
                     <p-tag
                       [rounded]="true"
                       [severity]="
@@ -562,7 +562,7 @@
         <div class="card p-3 h-100">
           <label class="fw-medium fs-18 mb-3">Thống kê công việc toàn trường</label>
           <div class="row" *ngIf="asmChartData">
-            <div class="col-md-5">
+            <div class="col-md-6">
               <tui-ring-chart
                 size="m"
                 [value]="asmChartData.data"
@@ -574,7 +574,7 @@
                 </div>
               </tui-ring-chart>
             </div>
-            <div class="row col-md-7" *ngIf="asmChartData">
+            <div class="row col-md-6" *ngIf="asmChartData">
               <div *ngFor="let item of asmChartData?.labels; let i = index">
                 <div class="row">
                   <div class="col-md-2">
@@ -634,17 +634,19 @@
                   <i class="bi bi-file-earmark-fill"></i>
                 </div>
                 <div
-                  class="col-md-9 td-content d-flex align-items-center"
+                  class="col-md-9  d-flex align-items-center"
                   pTooltip="{{ doc.guidanceDocumentName }}"
                   tooltipPosition="top"
                 >
-                  {{ doc.guidanceDocumentName }}
+                  <div class="td-content">{{ doc.guidanceDocumentName }}</div>
                 </div>
-                <div class="col-md-2 d-flex justify-content-end">
+                <div class="col-md-2">
                   <button
                     pButton
                     class="action-item d-flex justify-content-center align-items-center"
                     (click)="viewGuidanceDocumentDetail(doc.guidanceDocumentId)"
+                    pTooltip="Chi tiết"
+                    tooltipPosition="top"
                   >
                     <i class="bi bi-info-circle-fill"></i>
                   </button>
