fix file detail ini

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -475,12 +475,12 @@
             >
               <img src="assets/img/pdf_logo.svg" alt="" />
             </div>
-            <div class="row col-md-10 d-flex align-items-center mb-3">
+            <div class="row col-md-10 d-flex align-items-center mb-3 file-item-content">
               <div class="col-md-8">
                 <p class="mb-0">
-                  <span class="fw-medium"
-                    >{{ lastDocs.schoolDocument.documentName }}.pdf</span
-                  ><span></span>
+                  <span class="fw-medium span-doc-name"
+                    >{{ lastDocs.schoolDocument.documentName }}</span
+                  ><span class="fw-medium">.pdf</span>
                 </p>
                 <p class="mb-0">
                   <span>Mã tài liệu: </span>
@@ -621,12 +621,12 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-center mb-3">
+              <div class="row col-md-10 d-flex align-items-center mb-3 file-item-content">
                 <div class="col-md-8">
                   <p class="mb-0">
-                    <span class="fw-medium"
-                      >{{ lastDocs.departmentDocument.documentName }}.pdf</span
-                    ><span></span>
+                    <span class="fw-medium span-doc-name"
+                      >{{ lastDocs.departmentDocument.documentName }}</span
+                    ><span class="fw-medium">.pdf</span>
                   </p>
                   <p class="mb-0">
                     <span>Mã tài liệu: </span>
