--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -411,12 +411,12 @@
             >
               <img src="assets/img/pdf_logo.svg" alt="" />
             </div>
-            <div class="row col-md-10 d-flex align-items-center mb-3">
+            <div class="row col-md-10 d-flex align-items-center mb-3 file-item-content">
               <div class="col-md-8">
                 <p class="mb-0">
-                  <span class="fw-medium"
-                    >{{ lastDocs.departmentDocument.documentName }}.pdf</span
-                  ><span></span>
+                  <span class="fw-medium span-doc-name"
+                    >{{ lastDocs.departmentDocument.documentName }}</span
+                  ><span class="fw-medium">.pdf</span>
                 </p>
                 <p class="mb-0">
                   <span>Mã tài liệu: </span>
@@ -494,13 +494,13 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-center">
+              <div class="row col-md-10 d-flex align-items-center file-item-content">
                 <div class="col-md-6 mb-3">
                   <p class="mb-0">
-                    <span class="fw-medium"
-                      >{{ inputFileForm.get("documentName")?.value }}.pdf</span
+                    <span class="fw-medium span-doc-name"
+                      >{{ inputFileForm.get("documentName")?.value }}</span
                     >
-                    <span></span>
+                    <span class="fw-medium">.pdf</span>
                   </p>
                   <p class="mb-0">
                     <span>Mã tài liệu: </span>
@@ -567,12 +567,12 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-center">
+              <div class="row col-md-10 d-flex align-items-center file-item-content">
                 <div class="col-md-6 mb-3">
                   <p class="mb-0">
-                    <span class="fw-medium"
-                      >{{ lastDocs.schoolDocument.documentName }}.pdf</span
-                    ><span></span>
+                    <span class="fw-medium span-doc-name"
+                      >{{ lastDocs.schoolDocument.documentName }}</span
+                    ><span class="fw-medium">.pdf</span>
                   </p>
                   <p class="mb-0">
                     <span>Mã tài liệu: </span>
@@ -641,12 +641,12 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-center mb-3">
+              <div class="row col-md-10 d-flex align-items-center mb-3 file-item-content">
                 <div class="col-md-8">
                   <p class="mb-0">
-                    <span class="fw-medium"
-                      >{{ lastDocs.schoolDocument.documentName }}.pdf</span
-                    ><span></span>
+                    <span class="fw-medium span-doc-name"
+                      >{{ lastDocs.schoolDocument.documentName }}</span
+                    ><span class="fw-medium">.pdf</span>
                   </p>
                   <p class="mb-0">
                     <span>Mã tài liệu: </span>
