--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -120,7 +120,7 @@ input {
         border-radius: 8px;
         border: solid 1px $primary;
         transition: all 0.5s ease;
-        margin-right: 20px;
+        //margin-right: 20px;
         &:hover {
             background-color: $primary-hover;
             border-color: $primary-hover;
