--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -71,8 +71,20 @@
     }
 
     .file-item-content {
-        height: 100%;
-        margin: 0;
+        //height: 100%;
+        //margin: 0;
+      p {
+        white-space: nowrap;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        .span-doc-name {
+          flex-shrink: 1;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
     }
 
     &:hover {
@@ -185,7 +197,7 @@ input {
         border-radius: 8px;
         border: solid 1px $primary;
         transition: all 0.5s ease;
-        margin-right: 20px;
+        //margin-right: 20px;
         &:hover {
             background-color: $primary-hover;
             border-color: $primary-hover;
