--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -398,3 +398,13 @@ th {
         color: $primary;
     }
 }
+.empty-assignment-img {
+    width: 200px;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
+.search-item {
+    height: 40px;
+}
