--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -126,7 +126,7 @@
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-rowData let-rowNode>
-        <tr [ttRow]="rowNode" class="d-flex justify-content-between">
+        <tr [ttRow]="rowNode" class="d-flex justify-content-between row-node">
           <td class="folder">
             <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
             <i class="bi bi-folder-fill"></i>
