--- a/src/app/features/post-login/assignment/assignment-detail/assignment-detail.component.scss
+++ b/src/app/features/post-login/assignment/assignment-detail/assignment-detail.component.scss
@@ -7,7 +7,8 @@
         font-size: 20px;
         color: rgb(255, 196, 0);
     }
-    .file-icon {
+    .task-icon {
+        font-size: 20px;
         color: $primary;
     }
 }
@@ -76,4 +77,36 @@
     p {
         color: $primary;
     }
+}
+.p-button {
+    font-size: 16px;
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    // margin-right: 20px;
+    &:hover {
+        background-color: $primary-hover;
+        border-color: $primary-hover;
+    }
+}
+.row-node {
+    &:hover {
+        cursor: pointer;
+        background-color: rgb(244, 244, 244);
+    }
+}
+.empty-assignment-img {
+    width: 200px;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
+.search-item {
+    height: 40px;
+}
+.search-result {
+    max-height: 350px;
+    overflow-y: auto;
 }
