--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
@@ -54,3 +54,9 @@
         }
     }
 }
+.row-node {
+    &:hover {
+        cursor: pointer;
+        background-color: rgb(244, 244, 244);
+    }
+  }
