--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -10,7 +10,7 @@
   rejectLabel="Hủy bỏ"
   key="confirmDeleteInspector"
 ></p-confirmDialog>
-<div *ngIf="selectedInspectors && selectedInspectors.length == 0 && listEditable; else inspectorList"
+<div *ngIf="selectedInspectors && selectedInspectors.length == 0 && listEditable && createButton; else inspectorList"
      class="text-center">
   <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
 </div>
