--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
@@ -6,6 +6,7 @@
   [draggable]="false"
   [resizable]="false"
   (onHide)="resetInspectorListVisible()"
+  *ngIf="popup; else nonPopUp"
 >
   <div class="card mb-2">
     <p-table
@@ -156,3 +157,170 @@
     <div *ngIf="errorText" class="p-error">{{ errorText }}</div>
   </div>
 </p-dialog>
+<ng-template #nonPopUp class="h-100">
+  <div class="card h-100">
+    <p-table
+      *ngIf="!loadingList; else loading"
+      #dt
+      [value]="inspectorList"
+      [(selection)]="selectedInspectors"
+      dataKey="accountId"
+      [rowHover]="true"
+      [rows]="5"
+      [showCurrentPageReport]="true"
+      [paginator]="true"
+      [filterDelay]="0"
+      [globalFilterFields]="[
+        'user.fullName',
+        'roles[0].roleName',
+        'school.schoolName'
+      ]"
+    >
+      <ng-template pTemplate="caption">
+        <div
+          class="table-header d-flex justify-content-between align-items-center"
+        >
+          <span class="p-input-icon-left">
+            <i class="fa-solid fa-search"></i>
+            <input
+              pInputText
+              type="text"
+              (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+              placeholder="Tra cứu theo tên, chức vụ, trường"
+              class="search-input"
+            />
+          </span>
+          <div>
+            <button
+              *ngIf="!filterVisible"
+              pButton
+              (click)="changeFilterVisible(true)"
+              class="advance-search"
+            >
+              Tra cứu nâng cao
+            </button>
+            <button
+              *ngIf="filterVisible"
+              pButton
+              (click)="changeFilterVisible(false)"
+              class="advance-search"
+            >
+              Ẩn tra cứu nâng cao
+            </button>
+          </div>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header">
+        <tr *ngIf="filterVisible">
+          <th class="th-id"></th>
+          <th class="th-id"></th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="user.fullName"
+              pTooltip="(VD): Nguyễn Văn A"
+              tooltipPosition="top"
+              placeholder="Tên"
+            ></p-columnFilter>
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="roles[0].roleName"
+              pTooltip="(VD): Hiệu trưởng"
+              tooltipPosition="top"
+              placeholder="Chức vụ"
+            ></p-columnFilter>
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="school.schoolName"
+              pTooltip="(VD): Đơn vị"
+              tooltipPosition="top"
+              placeholder="Đơn vị"
+            ></p-columnFilter>
+          </th>
+        </tr>
+        <tr>
+          <th style="width: 4rem">
+            <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+          </th>
+          <th pSortableColumn="user.fullName">
+            <div>
+              Tên
+              <p-sortIcon field="user.fullName"></p-sortIcon>
+            </div>
+          </th>
+          <th pSortableColumn="roles[0].roleName">
+            <div>
+              Chức vụ
+              <p-sortIcon field="roles[0].roleName"></p-sortIcon>
+            </div>
+          </th>
+          <th pSortableColumn="school.schoolName">
+            <div>
+              Tên trường
+              <p-sortIcon field="school.schoolName"></p-sortIcon>
+            </div>
+          </th>
+          <!-- <th class="th-small"></th> -->
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-inspector>
+        <tr class="p-selectable-row">
+          <td>
+            <p-tableCheckbox [value]="inspector"></p-tableCheckbox>
+          </td>
+          <td>
+            <span class="p-column-title">Tên</span>
+            {{ inspector.user.fullName }}
+          </td>
+          <td>
+            <span class="p-column-title">Chức vụ</span>
+            {{ inspector.roles[0].roleName }}
+          </td>
+          <td>
+            <span class="p-column-title">Đơn vị</span>
+            {{ inspector.school.schoolName }}
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="5" class="text-center">Không tìm thấy người nào</td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <ng-template #loading>
+      <p-table [value]="data">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Tên</th>
+            <th>Chức vụ</th>
+            <th>Tên trường</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-rowIndex="rowIndex">
+          <tr>
+            <td>
+              <p class="tui-skeleton">Trường mầm non ánh sao</p>
+            </td>
+            <td>
+              <p class="tui-skeleton">Trường mầm non ánh sao</p>
+            </td>
+            <td>
+              <p class="tui-skeleton">Trường mầm non ánh sao</p>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </ng-template>
+    <div class="px-2 mb-2 d-flex flex-row justify-content-between align-items-end" *ngIf="!loadingList">
+      <button pButton (click)="addInspector()" class="px-3">
+        Lưu đoàn kiểm tra
+      </button>
+      <div *ngIf="errorText" class="p-error">{{ errorText }}</div>
+    </div>
+  </div>
+</ng-template>
