--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
@@ -315,9 +315,15 @@
           </tr>
         </ng-template>
       </p-table>
+      <div class="px-2 mb-2 d-flex flex-row justify-content-between align-items-end">
+        <button type="button" pButton (click)="addInspector()" class="px-3 tui-skeleton skeleton-button">
+          Lưu đoàn kiểm tra
+        </button>
+        <div *ngIf="errorText" class="p-error">{{ errorText }}</div>
+      </div>
     </ng-template>
     <div class="px-2 mb-2 d-flex flex-row justify-content-between align-items-end" *ngIf="!loadingList">
-      <button pButton (click)="addInspector()" class="px-3">
+      <button type="button" pButton (click)="addInspector()" class="px-3">
         Lưu đoàn kiểm tra
       </button>
       <div *ngIf="errorText" class="p-error">{{ errorText }}</div>
