--- a/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
@@ -310,8 +310,15 @@
           </div>
         </div>
         <div class="mt-5 mb-3 row w-100">
-          <div class="col-12 save-button d-flex w-100 justify-content-center">
-            <button class="btn text-white">Lưu quyết định</button>
+          <div class="col-12 save-button d-flex w-100">
+            <div class="col-md-3">
+              <button type="button" (click)="onBackButton()" pButton>Trang trước</button>
+            </div>
+            <div class="col-md-6 text-center">
+              <button class="btn text-white">Lưu quyết định</button>
+            </div>
+            <div class="col-md-3">
+            </div>
           </div>
         </div>
       </div>
@@ -320,9 +327,6 @@
           Trang sau
           <i class="bi bi-caret-right-fill"></i>
         </button>
-      </div>
-      <div class="col-md-12 text-start mb-2" *ngIf="activeIndex == 1">
-        <button type="button" (click)="onNextButton()" pButton>Trang trước</button>
       </div>
     </form>
   </div>
