--- a/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
@@ -33,9 +33,10 @@
   <h5 class="mat-headline-5 fw-medium">Tạo mới quyết định kiểm tra</h5>
   <p-steps [model]="items" [activeIndex]="activeIndex"
            (activeIndexChange)="onActiveIndexChange($event)"></p-steps>
-  <div class="row create-inspection-plan">
+  <div class="row create-inspection-plan mt-3">
     <form class="row" [formGroup]="inspectionPlanForm" (ngSubmit)="onSubmit()">
       <div class="form-content col-md-8 mb-2" *ngIf="activeIndex == 0">
+        <h6 class="mat-headline-6 fw-medium mb-2">Thông tin cơ bản</h6>
         <div class="inspection-plan-name mb-2">
           <label class="fw-medium mb-1">Tên quyết định kiểm tra<span class="p-error">*</span></label>
           <input
@@ -87,6 +88,7 @@
           <div class="col-md-6 mb-2">
             <label class="fw-medium mb-1">Trường kiểm tra<span class="p-error">*</span></label>
             <p-dropdown
+              (onChange)="onSchoolIdChange()"
               class="full-width-dropdown"
               [options]="schoolList"
               formControlName="schoolId"
@@ -215,6 +217,7 @@
         </div>
       </div>
       <div *ngIf="activeIndex == 1">
+        <h6 class="mat-headline-6 fw-medium mb-2">Danh sách thanh tra</h6>
         <div class="row">
           <div class="col-md-8">
             <div class="row">
@@ -286,7 +289,7 @@
               [inspectorListIsValid]="inspectorListIsValid"
             ></app-inspection-plan-inspector-popup>
           </div>
-          <div class="col-md-4 h-100">
+          <div class="col-md-4 mh-100">
             <app-inspection-plan-inspector-list
               class="w-100"
               [listEditable]="true"
