--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-popup/inspection-plan-inspector-popup.component.html
@@ -158,7 +158,7 @@
   </div>
 </p-dialog>
 <ng-template #nonPopUp>
-  <div class="card mh-100">
+  <div class="card h-100 d-flex flex-column justify-content-between non-popup">
     <p-table
       class="mh-100"
       *ngIf="!loadingList; else loading"
